adding the sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Notepad</title>
 </head>
 <body>
-    
+    <section class="navbar"></section>
+    <section class="sidebar"></section>
+    <section class="main-section"></section>
+    <section class="notes"></section>
 </body>
 </html>
