--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <title>Notepad</title>
 </head>
 <body>
-    <section class="navbar"></section>
-    <section class="sidebar"></section>
-    <section class="main-section"></section>
-    <section class="notes"></section>
+    <section class="container">
+        <section class="navbar">
+            <img src="/assets/3116859.jpg" alt="" class="img">
+            <div class="header">
+                <h1>Good Morning, Melina!</h1>
+                <h6>TUESDAY, JUNE 30, 2023</h6>
+            </div>
+        </section>
+        <section class="sidebar"></section>
+        <section class="main-section"></section>
+        <section class="notes"></section>
+    </section>
 </body>
 </html>
