--- a/index.html
+++ b/index.html
@@ -9,13 +9,33 @@
 <body>
     <section class="container">
         <section class="navbar">
-            <img src="/assets/3116859.jpg" alt="" class="img">
+            <img src="/assets/navbar-img.jpg" alt="" class="img">
             <div class="header">
                 <h1>Good Morning, Melina!</h1>
                 <h6>TUESDAY, JUNE 30, 2023</h6>
             </div>
         </section>
-        <section class="sidebar"></section>
+        <section class="sidebar">
+            <div>
+                <h3><img src="/assets/Logo-N.png" alt="" class="nine">OTES</h3>
+                <div>
+                    <div class="input-container">
+                        <input id="search" type="search" placeholder="Search">    
+                    </div>
+                    <div class="sidebar-prof">
+                        <ul>
+                            <li>Home</li>
+                            <li>Notifications</li>
+                            <li>Notes</li>
+                            <li>Tasks</li>
+                            <li>Trash</li>
+                            <li>Settings</li>
+                        </ul>
+                    </div>
+                </div>
+                
+            </div> 
+        </section>
         <section class="main-section"></section>
         <section class="notes"></section>
     </section>
