--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
                         </ul>
                     </div>
                 </div>
-                
+                <div class="profile-container">
+                    <div class="profile">
+                        <img src="/assets/pics/Profile-Picture.jpg" alt="" class="profile-img">
+                        <h5>Melina Chenani</h5>
+                    </div>
+                    <div class="profile-ellipsis">
+                        <img src="/assets/pics/ellipsis-icon.png" alt="" class="ellipsis">
+                    </div>
+                </div>
             </div> 
         </section>
         <section class="main-section"></section>
