--- a/index.html
+++ b/index.html
@@ -44,7 +44,92 @@
                 </div>
             </div> 
         </section>
-        <section class="main-section"></section>
+        <section class="main-section">
+            <main>
+                <h5 class="note__title"><img src="/assets/pics/icons8-note-24.png" alt="" class="icon"> My Notes</h5>
+                <div class="container">
+                    <div class="note-container">
+                        <div class="note">
+                            <div class="note-date-container">
+                                <h5 class="note-date">26, july, 2023</h5>
+                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                            </div>
+                            <h3>write your diaries</h3>
+                            <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
+                        </div>
+                        <div class="edge-triangle">
+                            <div class="square"></div>
+                        </div>
+                    </div>
+                    <div class="note-container">
+                        <div class="note">
+                            <div class="note-date-container">
+                                <h5 class="note-date">26, july, 2023</h5>
+                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                            </div>
+                            <h3>write your diaries</h3>
+                            <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
+                        </div>
+                        <div class="edge-triangle">
+                            <div class="square"></div>
+                        </div>
+                    </div>
+                    <div class="note-container">
+                        <div class="note">
+                            <div class="note-date-container">
+                                <h5 class="note-date">26, july, 2023</h5>
+                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                            </div>
+                            <h3>write your diaries</h3>
+                            <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
+                        </div>
+                        <div class="edge-triangle">
+                            <div class="square"></div>
+                        </div>
+                    </div>
+                    <div class="note-container">
+                        <div class="note">
+                            <div class="note-date-container">
+                                <h5 class="note-date">26, july, 2023</h5>
+                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                            </div>
+                            <h3>write your diaries</h3>
+                            <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
+                        </div>
+                        <div class="edge-triangle">
+                            <div class="square"></div>
+                        </div>
+                    </div>
+                    <div class="note-container">
+                        <div class="note">
+                            <div class="note-date-container">
+                                <h5 class="note-date">26, july, 2023</h5>
+                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                            </div>
+                            <h3>write your diaries</h3>
+                            <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
+                        </div>
+                        <div class="edge-triangle">
+                            <div class="square"></div>
+                        </div>
+                    </div>
+                    <div class="note-container">
+                        <div class="note">
+                            <div class="note-date-container">
+                                <h5 class="note-date">26, july, 2023</h5>
+                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                            </div>
+                            <h3>write your diaries</h3>
+                            <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
+                        </div>
+                        <div class="edge-triangle">
+                            <div class="square"></div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+            <div class="quick-notes_background"></div>
+        </section>
         <section class="notes"></section>
     </section>
 </body>
