adding quick-notes

--- a/index.html
+++ b/index.html
@@ -130,7 +130,44 @@
             </main>
             <div class="quick-notes_background"></div>
         </section>
-        <section class="notes"></section>
+        <section class="notes">
+            <div class="quick-notes">
+                <div class="quick-notes_title">
+                    <h3><img src="/assets/pics/icons8-pin-48.png" alt="" class="note-icon">Quick Notes</h3>
+                    <img src="/assets/pics/icons8-ellipsis-30.png" alt="" class="ellipsis">
+                </div>
+                <button class="quick-notes-btn">Design an Instagram story</button>
+                <button class="quick-notes-btn">Check client feedback</button>
+            </div>
+            <div class="new-note">
+                <h3><img src="/assets/pics/icons8-plus-48.png" alt="" class="note-icon">New Note</h3>
+                <div class="note-input">
+                    <input type="text" placeholder="Title" class="note-title">
+                </div>
+                <div class="text-decoration">
+                    <div>
+                        <button class="btn-tertiary">Normal Text</button>
+                    </div>
+                    <div>|</div>
+                    <div class="note-icons">
+                        <button class="btn-tertiary"><img src="/assets/pics/icons8-align-left-24.png" alt=""class="icon"></button>
+                        <button class="btn-tertiary"><img src="/assets/pics/icons8-bold-30.png" alt="" class="icon"></button>
+                        <button class="btn-tertiary"><img src="/assets/pics/icons8-edit-67.png" alt="" class="icon"></button>
+                    </div>
+                </div>
+                <p class="p">Enter Details</p>
+                <div>
+                    <div class="par"></div>
+                    <div class="par"></div>
+                    <div class="par"></div>
+                    <div class="par"></div>
+                    <div class="par"></div>                    
+                </div>
+                <div class="button">
+                    <button class="btn-primary">add new note</button>
+                </div>
+            </div>
+        </section>
     </section>
 </body>
 </html>
