updating Notepad app

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <body>
     <section class="container">
         <section class="navbar">
-            <img src="/assets/navbar-img.jpg" alt="" class="img">
-            <div class="header">
+            <img src="/assets/navbar-img.jpg" alt="" class="navbar_img">
+            <div class="navbar_desc">
                 <h1>Good Morning, Melina!</h1>
-                <h6>TUESDAY, JUNE 30, 2023</h6>
+                <h5>TUESDAY, JUNE 30, 2023</h5>
             </div>
         </section>
         <section class="sidebar">
-            <div>
-                <h3><img src="/assets/Logo-N.png" alt="" class="nine">OTES</h3>
+            <div class="sidebar_container">
+                <h3><img src="/assets/Logo-N.png" alt="" class="notepad_logo">OTES</h3>
                 <div>
                     <div class="input-container">
                         <input id="search" type="search" placeholder="Search">    
                     </div>
-                    <div class="sidebar-prof">
+                    <div class="sidebar-desc">
                         <ul>
                             <li>Home</li>
                             <li>Notifications</li>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="profile-container">
                     <div class="profile">
-                        <img src="/assets/pics/Profile-Picture.jpg" alt="" class="profile-img">
+                        <img src="/assets/Profile-Picture.jpg" alt="" class="profile-img">
                         <h5>Melina Chenani</h5>
                     </div>
                     <div class="profile-ellipsis">
