updating Notepad app

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
                         <h5>Melina Chenani</h5>
                     </div>
                     <div class="profile-ellipsis">
-                        <img src="/assets/pics/ellipsis-icon.png" alt="" class="ellipsis">
+                        <img src="/assets/ellipsis-icon.png" alt="" class="ellipsis-icon">
                     </div>
                 </div>
             </div> 
         </section>
         <section class="main-section">
             <main>
-                <h5 class="note__title"><img src="/assets/pics/icons8-note-24.png" alt="" class="icon"> My Notes</h5>
-                <div class="container">
+                <h5 class="note__title"><img src="/assets/icons8-note-24.png" alt="" class="icon"> My Notes</h5>
+                <div class="main_section_container">
                     <div class="note-container">
                         <div class="note">
                             <div class="note-date-container">
                                 <h5 class="note-date">26, july, 2023</h5>
-                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                                <img src="/assets/icons8-ellipsis-30.png" alt="" class="ellipsis">
                             </div>
                             <h3>write your diaries</h3>
                             <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
@@ -65,7 +65,7 @@
                         <div class="note">
                             <div class="note-date-container">
                                 <h5 class="note-date">26, july, 2023</h5>
-                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                                <img src="/assets/icons8-ellipsis-30.png" alt="" class="ellipsis">
                             </div>
                             <h3>write your diaries</h3>
                             <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
@@ -78,7 +78,7 @@
                         <div class="note">
                             <div class="note-date-container">
                                 <h5 class="note-date">26, july, 2023</h5>
-                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                                <img src="/assets/icons8-ellipsis-30.png" alt="" class="ellipsis">
                             </div>
                             <h3>write your diaries</h3>
                             <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
@@ -91,7 +91,7 @@
                         <div class="note">
                             <div class="note-date-container">
                                 <h5 class="note-date">26, july, 2023</h5>
-                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                                <img src="/assets/icons8-ellipsis-30.png" alt="" class="ellipsis">
                             </div>
                             <h3>write your diaries</h3>
                             <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
@@ -104,7 +104,7 @@
                         <div class="note">
                             <div class="note-date-container">
                                 <h5 class="note-date">26, july, 2023</h5>
-                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                                <img src="/assets/icons8-ellipsis-30.png" alt="" class="ellipsis">
                             </div>
                             <h3>write your diaries</h3>
                             <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
@@ -117,7 +117,7 @@
                         <div class="note">
                             <div class="note-date-container">
                                 <h5 class="note-date">26, july, 2023</h5>
-                                <img src="/assets/pics/icons8-ellipsis-30 (1).png" alt="" class="ellipsis">
+                                <img src="/assets/icons8-ellipsis-30.png" alt="" class="ellipsis">
                             </div>
                             <h3>write your diaries</h3>
                             <p>i haven't wrote anything in years maybe it's time to write something about the things i went through, good and the bad.</p>
@@ -133,14 +133,14 @@
         <section class="notes">
             <div class="quick-notes">
                 <div class="quick-notes_title">
-                    <h3><img src="/assets/pics/icons8-pin-48.png" alt="" class="note-icon">Quick Notes</h3>
-                    <img src="/assets/pics/icons8-ellipsis-30.png" alt="" class="ellipsis">
+                    <h3><img src="/assets/icons8-pin-48.png" alt="" class="note-icon">Quick Notes</h3>
+                    <img src="/assets/icons8-ellipsis-30.png" alt="" class="ellipsis">
                 </div>
                 <button class="quick-notes-btn">Design an Instagram story</button>
                 <button class="quick-notes-btn">Check client feedback</button>
             </div>
             <div class="new-note">
-                <h3><img src="/assets/pics/icons8-plus-48.png" alt="" class="note-icon">New Note</h3>
+                <h3><img src="/assets/icons8-plus-48.png" alt="" class="note-icon">New Note</h3>
                 <div class="note-input">
                     <input type="text" placeholder="Title" class="note-title">
                 </div>
@@ -150,9 +150,9 @@
                     </div>
                     <div>|</div>
                     <div class="note-icons">
-                        <button class="btn-tertiary"><img src="/assets/pics/icons8-align-left-24.png" alt=""class="icon"></button>
-                        <button class="btn-tertiary"><img src="/assets/pics/icons8-bold-30.png" alt="" class="icon"></button>
-                        <button class="btn-tertiary"><img src="/assets/pics/icons8-edit-67.png" alt="" class="icon"></button>
+                        <button class="btn-tertiary"><img src="/assets/icons8-align-left-24.png" alt=""class="icon"></button>
+                        <button class="btn-tertiary"><img src="/assets/icons8-bold-30.png" alt="" class="icon"></button>
+                        <button class="btn-tertiary"><img src="/assets/icons8-edit-67.png" alt="" class="icon"></button>
                     </div>
                 </div>
                 <p class="p">Enter Details</p>
